# Albumify

./: .env.example  .gitignore  README.md  RESUME.md  pyproject.toml
albumify/: caa.py  clip_loss.py  dataset.py  discriminator.py  eval.py  export.py  feats2depth.py  fetch_covers.py  finalize_labels.py  gen_labels.py  geom_loss.py  infer.py  lora.py  loss.py  model.py  musicbrainz.py  precompute_depth.py  review_app.py  split.py  train.py  transforms.py
data/: albums.json
data/holdout/: README.md
data/splits/: train.txt  val.txt
deploy/: pi.md
docs/superpowers/plans/: 2026-05-20-albumify.md  2026-05-22-plan-c-bce-logits.md  2026-05-23-plan-d-bce-warm-start.md  2026-05-23-plan-e-full-finetune-warmstart.md  2026-05-24-plan-f-paper-faithful-recipe.md
docs/superpowers/specs/: 2026-05-20-albumify-design.md  2026-05-21-plan-c-bce-logits-design.md  2026-05-23-plan-d-bce-warm-start-design.md  2026-05-23-plan-e-full-finetune-warmstart-design.md  2026-05-23-plan-f-paper-faithful-recipe-design.md
infra/: create_vm.sh  gcp_setup.md  setup_vm.sh
tests/: test_albums_schema.py  test_caa.py  test_clip_loss.py  test_dataset.py  test_discriminator.py  test_eval.py  test_export.py  test_fetch_covers.py  test_finalize_labels.py  test_gen_labels.py  test_geom_loss.py  test_infer.py  test_loss.py  test_model.py  test_musicbrainz.py  test_review_app.py  test_split.py  test_train.py  test_transforms.py
